💄 fix: contact flex and gap

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -217,6 +217,10 @@ button {
 	gap: 1.5rem;
 }
 
+.gap-1rem {
+	gap: 1rem;
+}
+
 .flex-wrap {
 	flex-wrap: wrap;
 }
@@ -575,7 +579,6 @@ button {
 }
 
 .form {
-	gap: 1rem;
 	width: 100%;
 
 	.form__item {
